src/.tab.output
Grammar

    0 $accept: syntax $end

    1 syntax: op_newlines structures
    2       | op_newlines linerecords

    3 structures: structures structure
    4           | structure

    5 $@1: /* empty */

    6 structure: VAR $@1 '{' op_newlines structures '}' newlines
    7          | assignment

    8 assignment: VAR '=' VAR newlines
    9           | VAR '=' newlines

   10 linerecords: linerecords linerecord
   11            | linerecord

   12 linerecord: terms newlines

   13 terms: terms VAR
   14      | VAR

   15 newlines: newlines NL
   16         | NL

   17 op_newlines: op_newlines NL
   18            | /* empty */


Terminals, with rules where they appear

$end (0) 0
'=' (61) 8 9
'{' (123) 6
'}' (125) 6
error (256)
VAR (258) 6 8 9 13 14
NL (259) 15 16 17


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
syntax (9)
    on left: 1 2, on right: 0
structures (10)
    on left: 3 4, on right: 1 3 6
structure (11)
    on left: 6 7, on right: 3 4
$@1 (12)
    on left: 5, on right: 6
assignment (13)
    on left: 8 9, on right: 7
linerecords (14)
    on left: 10 11, on right: 2 10
linerecord (15)
    on left: 12, on right: 10 11
terms (16)
    on left: 13 14, on right: 12 13
newlines (17)
    on left: 15 16, on right: 6 8 9 12 15
op_newlines (18)
    on left: 17 18, on right: 1 2 6 17


State 0

    0 $accept: . syntax $end

    $default  reduce using rule 18 (op_newlines)

    syntax       go to state 1
    op_newlines  go to state 2


State 1

    0 $accept: syntax . $end

    $end  shift, and go to state 3


State 2

    1 syntax: op_newlines . structures
    2       | op_newlines . linerecords
   17 op_newlines: op_newlines . NL

    VAR  shift, and go to state 4
    NL   shift, and go to state 5

    structures   go to state 6
    structure    go to state 7
    assignment   go to state 8
    linerecords  go to state 9
    linerecord   go to state 10
    terms        go to state 11


State 3

    0 $accept: syntax $end .

    $default  accept


State 4

    6 structure: VAR . $@1 '{' op_newlines structures '}' newlines
    8 assignment: VAR . '=' VAR newlines
    9           | VAR . '=' newlines
   14 terms: VAR .

    '='  shift, and go to state 12

    '{'       reduce using rule 5 ($@1)
    $default  reduce using rule 14 (terms)

    $@1  go to state 13


State 5

   17 op_newlines: op_newlines NL .

    $default  reduce using rule 17 (op_newlines)


State 6

    1 syntax: op_newlines structures .
    3 structures: structures . structure

    VAR  shift, and go to state 14

    $default  reduce using rule 1 (syntax)

    structure   go to state 15
    assignment  go to state 8


State 7

    4 structures: structure .

    $default  reduce using rule 4 (structures)


State 8

    7 structure: assignment .

    $default  reduce using rule 7 (structure)


State 9

    2 syntax: op_newlines linerecords .
   10 linerecords: linerecords . linerecord

    VAR  shift, and go to state 16

    $default  reduce using rule 2 (syntax)

    linerecord  go to state 17
    terms       go to state 11


State 10

   11 linerecords: linerecord .

    $default  reduce using rule 11 (linerecords)


State 11

   12 linerecord: terms . newlines
   13 terms: terms . VAR

    VAR  shift, and go to state 18
    NL   shift, and go to state 19

    newlines  go to state 20


State 12

    8 assignment: VAR '=' . VAR newlines
    9           | VAR '=' . newlines

    VAR  shift, and go to state 21
    NL   shift, and go to state 19

    newlines  go to state 22


State 13

    6 structure: VAR $@1 . '{' op_newlines structures '}' newlines

    '{'  shift, and go to state 23


State 14

    6 structure: VAR . $@1 '{' op_newlines structures '}' newlines
    8 assignment: VAR . '=' VAR newlines
    9           | VAR . '=' newlines

    '='  shift, and go to state 12

    $default  reduce using rule 5 ($@1)

    $@1  go to state 13


State 15

    3 structures: structures structure .

    $default  reduce using rule 3 (structures)


State 16

   14 terms: VAR .

    $default  reduce using rule 14 (terms)


State 17

   10 linerecords: linerecords linerecord .

    $default  reduce using rule 10 (linerecords)


State 18

   13 terms: terms VAR .

    $default  reduce using rule 13 (terms)


State 19

   16 newlines: NL .

    $default  reduce using rule 16 (newlines)


State 20

   12 linerecord: terms newlines .
   15 newlines: newlines . NL

    NL  shift, and go to state 24

    $default  reduce using rule 12 (linerecord)


State 21

    8 assignment: VAR '=' VAR . newlines

    NL  shift, and go to state 19

    newlines  go to state 25


State 22

    9 assignment: VAR '=' newlines .
   15 newlines: newlines . NL

    NL  shift, and go to state 24

    $default  reduce using rule 9 (assignment)


State 23

    6 structure: VAR $@1 '{' . op_newlines structures '}' newlines

    $default  reduce using rule 18 (op_newlines)

    op_newlines  go to state 26


State 24

   15 newlines: newlines NL .

    $default  reduce using rule 15 (newlines)


State 25

    8 assignment: VAR '=' VAR newlines .
   15 newlines: newlines . NL

    NL  shift, and go to state 24

    $default  reduce using rule 8 (assignment)


State 26

    6 structure: VAR $@1 '{' op_newlines . structures '}' newlines
   17 op_newlines: op_newlines . NL

    VAR  shift, and go to state 14
    NL   shift, and go to state 5

    structures  go to state 27
    structure   go to state 7
    assignment  go to state 8


State 27

    3 structures: structures . structure
    6 structure: VAR $@1 '{' op_newlines structures . '}' newlines

    VAR  shift, and go to state 14
    '}'  shift, and go to state 28

    structure   go to state 15
    assignment  go to state 8


State 28

    6 structure: VAR $@1 '{' op_newlines structures '}' . newlines

    NL  shift, and go to state 19

    newlines  go to state 29


State 29

    6 structure: VAR $@1 '{' op_newlines structures '}' newlines .
   15 newlines: newlines . NL

    NL  shift, and go to state 24

    $default  reduce using rule 6 (structure)
